<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"></Toolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
         />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/tv_manager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_tab_assetManager"
            android:drawableTop="@drawable/selector_tab_asset"
            android:gravity="center"
            android:paddingTop="2dp"
            />
        
        <TextView 
            android:id="@+id/tv_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_tab_data"
            android:drawableTop="@drawable/selector_tab_data"
            android:gravity="center"
            android:paddingTop="2dp"
            />
        
        <TextView 
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_tab_search"
            android:drawableTop="@drawable/selector_tab_search"
            android:gravity="center"
            android:paddingTop="2dp"
            />
        
    </LinearLayout>

</LinearLayout>
